# transaction-enrichment-ml

./: .gitignore  README.md  app.py  categorize_transactions.py  pyproject.toml  requirements.txt
docs/: _config.yml  architecture.md  getting-started.md  index.md  resources.md  vectorization.md  whitepaper.md
scripts/: generate_synthetic_data_with_labels.py  train_brand_classifier.py
src/: brand_matcher.py  industry_classifier.py
tests/: test_brand_matcher.py  test_categorization_pipeline.py  test_industry_classifier.py
